# micro_ros_setup

./: README.md
config/freertos/kria_kr260/: board.repos  build.sh  configure.sh  create.sh  flash.sh  package.xml
config/freertos/xilinx_kr260/: board.repos
